--- a/css/elements.css
+++ b/css/elements.css
@@ -2,6 +2,17 @@
 /*----------------------------------------------
 CSS settings for HTML div Exact Center
 ------------------------------------------------*/
+#reminder{
+  width:100%;
+  height:100%;
+  opacity:.95;
+  top:0;
+  left:0;
+  display:none;
+  position:fixed;
+  background-color:#313131;
+  overflow:auto
+}
 #abc {
 width:100%;
 height:100%;
@@ -100,7 +111,7 @@ border-radius:5px
 /*span {
 color:red;
 font-weight:700
-}*/
+}
 /*button {
 width:10%;
 height:45px;
