--- a/css/app.css
+++ b/css/app.css
@@ -143,6 +143,7 @@ height: 100%;
 
 #reminder input[type=text], select, textarea{
     width: 100%;
+    position: relative;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
