--- a/css/site.css
+++ b/css/site.css
@@ -71,7 +71,7 @@ p:first-child {
     margin-top: 0;
 }
 
-input {
+/* input {
     font-size: 13px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 5px;
@@ -79,7 +79,7 @@ input {
     padding: 3px;
     background: #fff;
     border: 1px solid #aac;
-}
+} */
 
 input.time {
     width: 80px;
