--- a/css/elements.css
+++ b/css/elements.css
@@ -61,7 +61,7 @@ margin:10px -50px;
 border:0;
 border-top:1px solid #ccc
 }
-input[type=text] {
+/* input[type=text] {
 width:82%;
 padding:10px;
 margin-top:30px;
@@ -69,7 +69,7 @@ border:1px solid #ccc;
 padding-left:40px;
 font-size:16px;
 font-family:raleway
-}
+} */
 #name {
 background-image:url(../images/name.jpg);
 background-repeat:no-repeat;
